# Sudoku-Solver

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  pyproject.toml  requirements.txt  sudoku_cli.py  test_performance.py
src/: sudoku.py
src/sudoku/: Sudoku.py  __init__.py  __main__.py  sudoku.py  sudoku_cli.py  sudoku_constraint.py  sudoku_integer.py  sudoku_iterator.py  sudoku_sat.py  sudoku_solver.py
tests/: test_sudoku.py
tests/test_data/: test_input.txt  test_input3.txt  test_output.txt  test_performance_output.txt
